# temporal-io-learning

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  activities.py  neural_network.py  pyproject.toml  run_worker.py  run_workflow.py  shared.py  workflows.py
backend/src/: activities.py  run_worker.py  run_workflow.py  shared.py  workflows.py
backend/src/tests/: ActivitiesTest.py
frontend/: .gitignore  Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  shared.ts
frontend/app/api/deleteNetwork/: route.ts
frontend/app/api/executeNetwork/: route.ts
frontend/app/api/get_all_networks/: route.ts
frontend/app/api/startBuy/: route.ts
frontend/temporal/: tsconfig.json
frontend/temporal/lib/: activities.d.ts  activities.d.ts.map  activities.js  activities.js.map  client.d.ts  client.d.ts.map  client.js  client.js.map  shared.d.ts  shared.d.ts.map  shared.js  shared.js.map  worker.js  worker.js.map  workflows.d.ts  workflows.d.ts.map  workflows.js  workflows.js.map
frontend/temporal/src/: activities.ts  client.ts  shared.ts  worker.ts  workflows.ts
server/: .gitignore  temporal.db  temporal.db.new
