[project]
name = "src"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "temporalio",
    "sll_neural_network @ git+https://github.com/sophie-la-li/python-ml-learning.git"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock"
]

[tool.pytest.ini_options]
pythonpath = ["./src"]
python_files = ["*Test.py"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
